[package]
name = "algebra_integral_fee_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
arbiter-core = "0.5.1"
tokio = { version = "1.11.0", features = ["full"] }
ethers = { version = "2.0.10" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
anyhow = "1.0.71"

revm = { version = "3.3.0", features = ["default"] }
